# local

./: .bazelignore  .bazelrc  .env-sample  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  BUILD.bazel  MODULE.bazel  Makefile  README.md  Tiltfile  agents.md  docker-compose.yml  pyrightconfig.json  requirements.in
apps/athena-bot/: AGENTS.md  BUILD.bazel  README.md
apps/athena-bot/docker/: BUILD.bazel  Dockerfile  build.sh  logs.sh  run.sh  status.sh  stop.sh
apps/athena-bot/src/athena_bot/: __init__.py  agent_debate.py  bot.py  config.py  debate.py  main.py  personas.py
apps/athena-bot/src/athena_bot/llm/: __init__.py  base.py  openai_provider.py
apps/athena-bot/src/athena_bot/resources/: personas.yaml
apps/athena-bot/tests/: run_pytest.py  test_client.py
apps/athena-bot/tests/athena_bot/: test_agent_debate.py  test_config.py  test_debate.py
apps/ingest-service/: AGENTS.md  BUILD.bazel  Dockerfile  README.md  build.gradle
apps/ingest-service/docker/: BUILD.bazel  Dockerfile  build.sh  logs.sh  run.sh  status.sh  stop.sh
apps/ingest-service/src/main/java/com/example/ingest/: Account.java  AccountResolver.java  BaseCsvReader.java  CapitalOneVentureXCsvReader.java  CapitalOneVentureXTransaction.java  ChaseFreedomCsvReader.java  CsvTransactionMapper.java  DatabaseConfig.java  DirectoryWatchService.java  GenericTransaction.java  JdbcUrl.java  (+8 more)
apps/ingest-service/src/main/resources/: application.properties
apps/ingest-service/src/main/resources/mappings/: ch.json  co.json  example.yaml
apps/ingest-service/src/test/java/org/artificers/: RunAllTests.java
apps/ingest-service/src/test/resources/examples/: ch1234-example.csv  co1828-example.csv
apps/plutary/: AGENTS.md  BUILD.bazel  README.md
apps/plutary/ios/plutary/: README.md
apps/plutary/ios/plutary/plutary/: ContentView.swift  Logging.swift  Persistence.swift  PlutaryApp.swift
apps/plutary/ios/plutary/plutary.xcodeproj/: project.pbxproj
apps/plutary/ios/plutary/plutary/Data/: FileReceiptImageStore.swift  VisionReceiptOcrService.swift
apps/plutary/ios/plutary/plutary/Data/CoreData/: CoreDataReceiptStore.swift  ReceiptEntity+Helpers.swift
apps/plutary/ios/plutary/plutary/Domain/: Receipt.swift  ReceiptOcrService.swift  ReceiptStoreProtocol.swift  ReceiptSyncService.swift
apps/plutary/ios/plutary/plutary/Plutary.xcdatamodeld/: .xccurrentversion
apps/plutary/ios/plutary/plutary/Plutary.xcdatamodeld/Plutary.xcdatamodel/: contents
apps/plutary/ios/plutary/plutary/Support/: CameraPicker.swift  UITestSeeder.swift
apps/plutary/ios/plutary/plutary/ViewModels/: ManualReceiptFormViewModel.swift  ReceiptCaptureReviewViewModel.swift  ReceiptCaptureViewModel.swift  ReceiptDetailViewModel.swift  ReceiptsListViewModel.swift
apps/plutary/ios/plutary/plutary/Views/: ManualReceiptFormView.swift  ReceiptCaptureFlowView.swift  ReceiptCaptureReviewView.swift  ReceiptDetailView.swift  ReceiptRowView.swift  ReceiptsListView.swift
apps/plutary/ios/plutary/plutaryTests/: PlutaryTests.swift
apps/plutary/ios/plutary/plutaryUITests/: PlutaryUITests.swift  PlutaryUITestsLaunchTests.swift
apps/plutary/mac_vision_ocr/: AGENTS.md  BUILD.bazel  README.md  vision_cli_smoke_test.sh
apps/plutary/mac_vision_ocr/Sources/MacVisionOcr/: Models.swift  OcrError.swift  VisionOcrService.swift
apps/plutary/src/plutary/cli/: __init__.py  receipt_cli.py
apps/plutary/src/plutary/ocr/: BUILD.bazel  __init__.py  binary_service.py  errors.py  interfaces.py  paddle_service.py  paddle_service_bin.py  preprocessing.py  receipt_image.py  reporting.py  result.py
apps/plutary/src/plutary/persistence/: __init__.py  config.py  database.py  receipt_repository.py
apps/plutary/src/plutary/receipts/: __init__.py  models.py  parser.py  pipeline.py
apps/plutary/src/test/resources/ground_truth/: sample_receipt_photo_02.json  sample_receipt_photo_04.json
apps/plutary/tests/: conftest.py  run_pytest.py
apps/plutary/tests/ocr/: BUILD.bazel  test_binary_service.py  test_paddle_service.py  test_paddle_service_bin.py  test_preprocessing.py
apps/plutary/tests/ocr/golden/: BUILD.bazel  sample_receipt_photo_01_request_vision.json  sample_receipt_photo_01_response_vision.json
apps/plutary/tests/persistence/: test_config.py  test_receipt_cli_persistence.py
apps/plutary/tests/receipts/: test_ground_truth_pipeline.py  test_parser.py  test_pipeline.py
apps/plutary/tests/util/: __init__.py  record_factory.py
apps/yong/: AGENTS.md  BUILD.bazel  README.md
apps/yong/mac_vision_ocr/: AGENTS.md  BUILD.bazel  README.md  vision_cli_smoke_test.sh
apps/yong/mac_vision_ocr/Sources/MacVisionOcr/: main.swift
apps/yong/src/test/resources/ground_truth/: sample_receipt_photo_01.json  sample_receipt_photo_03.json  sample_receipt_photo_05.json
apps/yong/src/yong/: __init__.py
apps/yong/src/yong/cli/: __init__.py  receipt_cli.py
apps/yong/src/yong/ocr/: BUILD.bazel  __init__.py  binary_service.py  errors.py  paddle_service.py  paddle_service_bin.py  preprocessing.py  receipt_image.py  result.py
apps/yong/src/yong/persistence/: config.py  database.py  receipt_repository.py
apps/yong/src/yong/receipts/: __init__.py  models.py  parser.py  pipeline.py
apps/yong/tests/: conftest.py
apps/yong/tests/ocr/: BUILD.bazel  run_pytest.py  test_binary_service.py  test_paddle_service.py  test_paddle_service_bin.py  test_preprocessing.py
apps/yong/tests/ocr/golden/: BUILD.bazel  sample_receipt_photo_01_response_paddle.json  sample_receipt_photo_01_response_vision.json
apps/yong/tests/persistence/: test_config.py  test_receipt_cli_persistence.py
apps/yong/tests/receipts/: test_ground_truth_pipeline.py  test_parser.py  test_pipeline.py
apps/yong/tests/util/: __init__.py  record_factory.py
ops/sql/plutary/: BUILD.bazel  V1__create_receipt_tables.sql
ops/sql/service-template/: BUILD.bazel  README.md  V1__init.sql
ops/sql/yong/: BUILD.bazel  V2__add_failure_reason_column.sql  V3__add_transaction_tables.sql
tools/sql/: BUILD.bazel  flyway.bzl  flyway_migrate.sh  postgres_test.bzl  postgres_test_runner.py
(+240 files in other folders)
