alias(
    name = "venv",
    actual = "//tools/python:venv",
    visibility = ["//visibility:public"],
)

alias(
    name = "lock",
    actual = "//tools/python:lock",
    visibility = ["//visibility:public"],
)

alias(
    name = "format",
    actual = "//tools/format:format",
    visibility = ["//visibility:public"],
)
