module(name = "local-repo")

# Use bzlmod to manage JVM dependencies via rules_jvm_external
bazel_dep(name = "rules_jvm_external", version = "6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        # Main runtime/compile deps
        "org.flywaydb:flyway-core:9.22.3",
        "org.jooq:jooq:3.18.5",
        "com.zaxxer:HikariCP:5.1.0",
        "com.opencsv:opencsv:5.9",
        "com.google.protobuf:protobuf-java:4.27.2",
        "org.apache.poi:poi-ooxml:5.2.3",
        "jakarta.annotation:jakarta.annotation-api:2.1.1",
        "org.postgresql:postgresql:42.6.0",
        "commons-codec:commons-codec:1.15",
        "com.fasterxml.jackson.core:jackson-databind:2.15.2",
        "info.picocli:picocli:4.7.5",
        "ch.qos.logback:logback-classic:1.4.11",
        "org.slf4j:slf4j-api:2.0.9",
        "com.google.dagger:dagger:2.51.1",
        "com.google.dagger:dagger-compiler:2.51.1",

        # Test deps (can be used later when adding Bazel tests)
        "org.junit.jupiter:junit-jupiter:5.10.1",
        "org.mockito:mockito-core:5.7.0",
        "org.assertj:assertj-core:3.24.2",
        "com.h2database:h2:2.2.224",
        # JUnit 5 console launcher for Bazel-driven tests
        "org.junit.platform:junit-platform-console-standalone:1.10.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
