package(default_visibility = ["//visibility:private"])

# Dagger annotation processor
java_plugin(
    name = "dagger_plugin",
    processor_class = "dagger.internal.codegen.ComponentProcessor",
    deps = [
        "@maven//:com_google_dagger_dagger_compiler",
    ],
)

java_library(
    name = "ingest_lib",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    resource_strip_prefix = "apps/ingest-service/src/main/resources",
    plugins = [":dagger_plugin"],
    deps = [
        "//ops/sql:jooq_model",
        "@maven//:org_flywaydb_flyway_core",
        "@maven//:org_jooq_jooq",
        "@maven//:com_zaxxer_HikariCP",
        "@maven//:com_opencsv_opencsv",
        "@maven//:org_apache_poi_poi_ooxml",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
        "@maven//:commons_codec_commons_codec",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:info_picocli_picocli",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_google_dagger_dagger",
        "@maven//:javax_inject_javax_inject",
        # JDBC driver at runtime
        "@maven//:org_postgresql_postgresql",
    ],
)

java_binary(
    name = "ingest_app",
    main_class = "org.artificers.ingest.app.IngestApp",
    runtime_deps = [":ingest_lib"],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "new_account_cli",
    main_class = "org.artificers.ingest.cli.NewAccountCliLauncher",
    runtime_deps = [":ingest_lib"],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "db_validate",
    main_class = "org.artificers.ingest.tools.DbValidator",
    runtime_deps = [":ingest_lib"],
    visibility = ["//visibility:public"],
)

## Docker-related helpers moved to //apps/ingest-service/docker



java_test(
    name = "ingest_tests",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/resources/**"]),
    resource_strip_prefix = "apps/ingest-service/src/test/resources",
    size = "large",
    timeout = "moderate",
    # Use a small custom JUnit Platform launcher
    use_testrunner = False,
    main_class = "org.artificers.RunAllTests",
    deps = [
        ":ingest_lib",
        "//ops/sql:jooq_model",
        "@maven//:info_picocli_picocli",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_jooq_jooq",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_engine",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_assertj_assertj_core",
        "@maven//:com_h2database_h2",
    ],
    visibility = ["//visibility:public"],
)
