package(default_visibility = ["//visibility:public"])

load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image")

# Layer containing the application jar at /app/app.jar
pkg_tar(
    name = "app_layer",
    srcs = ["//apps/ingest-service:ingest_app_deploy.jar"],
    package_dir = "/app",
)

# Hermetic OCI image built via rules_oci
oci_image(
    name = "image",
    base = "@temurin_jre//image",
    tars = [":app_layer"],
    workdir = "/app",
    entrypoint = ["java", "-jar", "/app/ingest_app_deploy.jar"],
)

# Transitional helper scripts (optional):
sh_binary(
    name = "build_image",
    srcs = ["build.sh"],
)

sh_binary(
    name = "run_container",
    srcs = ["run.sh"],
)

sh_binary(
    name = "logs",
    srcs = ["logs.sh"],
)

sh_binary(
    name = "stop_container",
    srcs = ["stop.sh"],
)

sh_binary(
    name = "status",
    srcs = ["status.sh"],
)
