load("//tools/sql:flyway.bzl", "flyway_migration")

filegroup(
    name = "sql_files",
    srcs = glob(["*.sql"]),
    visibility = ["//visibility:public"],
)

flyway_migration(
    name = "db_migrate",
    sql_dir = "ops/sql/plutary",
    env_prefix = "PLUTARY",
    history_table = "flyway_plutary_schema_history",
)
