load("//tools/sql:flyway.bzl", "flyway_migration")

filegroup(
    name = "sql_files",
    srcs = glob(["*.sql"]),
    visibility = ["//visibility:public"],
)

flyway_migration(
    name = "db_migrate",
    sql_dir = "ops/sql/yong",
    env_prefix = "YONG",
    history_table = "flyway_yong_schema_history",
)
