package(default_visibility = ["//visibility:public"])

load("@pip//:requirements.bzl", "requirement")

py_test(
    name = "test_paddle_service_bin",
    srcs = ["run_pytest.py"],
   main = "run_pytest.py",
   data = [
       "test_paddle_service_bin.py",
        "//apps/plutary/tests/ocr/golden:sample_receipt_photo_01_response_paddle.json",
        "//apps/plutary:example_receipts",
        "//apps/plutary:ocr_service_binary",
    ],
    deps = [
        "//apps/plutary/src/plutary/ocr:ocr_lib",
        requirement("paddleocr"),
        requirement("pytest"),
    ],
)
